--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
