--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 
+server.error.include-exception=true
+
+spring.jpa.open-in-view=false
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
