--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:54320/rental
+spring.datasource.url=jdbc:postgresql://192.168.99.101:54320/rental
 spring.datasource.username=rent
 spring.datasource.password=Rental123!
 
