--- a/rent-scoot/package.json
+++ b/rent-scoot/package.json
@@ -7,23 +7,31 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.7",
+    "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "emailjs-com": "^2.4.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.0.3",
+    "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
+    "moment": "2.25.3",
+    "popper.js": "^1.16.1",
+    "qs": "^6.9.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-google-maps": "^9.4.5",
     "react-input-just-numbers": "^1.0.3",
     "react-map-gl": "^5.0.12",
+    "react-moment": "^0.9.7",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.1",
     "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
