--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# env vars
+POSTGRES_CONTAINER=localhost
+client.url=localhost
 
 server.error.include-exception=true
 
@@ -8,7 +11,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL - Make sure to change the IP to container name (Should work on Linux)
-spring.datasource.url=jdbc:postgresql://192.168.99.102:54320/rental
+spring.datasource.url=jdbc:postgresql://${POSTGRES_CONTAINER}:54320/rental
 spring.datasource.username=rent
 spring.datasource.password=Rental123!
 
